Added more dom utils, and JSR

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lib-utils",
   "version": "0.1.0",
   "description": "Utils and Libs that you could use on any project",
-  "module": "true",
+  "type": "module",
   "scripts": {
     "test": "vitest run"
   },
@@ -19,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/radum/lib-utils/issues"
   },
-  "homepage": "https://github.com/radum/lib-utils#readme"
+  "homepage": "https://github.com/radum/lib-utils#readme",
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a",
+  "devDependencies": {
+    "@vitest/browser": "^1.6.0",
+    "playwright": "^1.45.1",
+    "vitest": "^1.6.0"
+  }
 }
