--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "@vitest/browser": "^1.6.0",
     "playwright": "^1.45.1",
     "vitest": "^1.6.0"
-  }
+  },
+  "exports": {
+		"./libs": "./libs/*",
+		"./utils": "./utils/*",
+		"./utils/dom": "./utils/dom/*"
+	}
 }
